# otus_type_annotation

./: .pre-commit-config.yaml  Dockerfile  README.md  commitlint.config.js  makefile  pyproject.toml
.github/workflows/: ci.yml
basic/any/: any.py
basic/dict/: dict.py
basic/final/: final.py
basic/kwargs/: kwargs.py
basic/list/: list.py
basic/optional/: optional.py
basic/parameter/: parameter.py
basic/return/: return.py
basic/tuple/: tuple.py
basic/typealias/: typealias.py
basic/union/: union.py
basic/variable/: variable.py
